# AdvancedDLSupport

./: .gitignore  .travis.yml  AdvanceDLSupport.sln  AdvanceDLSupport.sln.DotSettings  AdvancedDLSupport.csproj  CONTRIBUTING.md  DLSupport.cs  Directory.Build.props  Directory.Build.targets  Example.c  LICENSE-NOT-GPL.md  Program.cs  README.md  StrictEmit-LICENSE.md  appveyor.yml  run-tests.sh  stylecop.json  stylecop.ruleset
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dotnet.yml
AdvanceDLSupport.Tests/: AdvanceDLSupport.Tests.csproj  BaseIntegrationTests.cs  DisposeChecksIntegrationTests.cs  FunctionIntegrationTests.cs  IntegrationTests.cs  LazyLoadingIntegrationTests.cs  LibraryFixture.cs  PropertyIntegrationTests.cs
AdvanceDLSupport.Tests/Interfaces/: IBaseLibrary.cs  IDisposeCheckLibrary.cs  IFunctionLibrary.cs  ILazyLoadingLibrary.cs  IPropertyLibrary.cs  ITestLibrary.cs  ITestLibraryMissingMethod.cs  ITestLibraryMissingProperty.cs
AdvanceDLSupport.Tests/Structures/: TestStruct.cs
AdvanceDLSupport.Tests/c/: CMakeLists.txt
AdvanceDLSupport.Tests/c/src/: DisposeTests.c  EventTests.c  FunctionTests.c  LazyLoadingTests.c  PropertyTests.c  Test.c  TestStruct.h
AdvancedDLSupport/: .editorconfig  AdvancedDLSupport.ExternalAnnotations.xml  AdvancedDLSupport.csproj  AdvancedDLSupport.csproj.DotSettings  AnonymousImplementationBase.cs  AnonymousImplementationBuilder.cs  AssemblyInfo.cs  DLSupport.cs  DLSupportConstructor.cs  DynamicLinkLibraryPathResolver.cs  IPlatformLoader.cs  ImplementationConfiguration.cs  ImplementationOptions.cs  KeyForInterfaceTypeAndLibName.cs  LibraryIdentifier.cs  NativeLibraryBase.cs  NativeLibraryBuilder.cs
AdvancedDLSupport.AOT/: AdvancedDLSupport.AOT.ExternalAnnotations.xml  AdvancedDLSupport.AOT.csproj  ExitCodes.cs  NLog.config  PersistentDynamicAssemblyProvider.cs  PregeneratedAssemblyBuilder.cs  Program.cs
AdvancedDLSupport.AOT.Tasks/: AdvancedDLSupport.AOT.Tasks.csproj  AdvancedDLSupport.AOT.Tasks.targets  GenerateDLDynamicAssembliesTask.cs
AdvancedDLSupport.AOT.Tests/: AdvancedDLSupport.AOT.Tests.csproj
AdvancedDLSupport.AOT.Tests/Fixtures/: InitialCleanupFixture.cs
AdvancedDLSupport.AOT.Tests/TestBases/: NativeLibraryBuilderTestBase.cs  PregeneratedAssemblyBuilderTestBase.cs
AdvancedDLSupport.AOT.Tests/c/: CMakeLists.txt
AdvancedDLSupport.AOT.Tests/c/CMake/: install-functions.cmake
AdvancedDLSupport.AOT.Tests/c/src/: AOTTests.c  comp.h
AdvancedDLSupport.AOT.Tests/targets/: CMake-Unix.targets  CMake-Win.targets  CMake.targets
AdvancedDLSupport.AOT/Arguments/: CommandLineArguments.cs
AdvancedDLSupport.AssemblyGenerator/: PregeneratedAssemblyBuilder.cs
AdvancedDLSupport.Benchmark/: AdvancedDLSupport.Benchmark.ExternalAnnotations.xml  AdvancedDLSupport.Benchmark.csproj  Program.cs
AdvancedDLSupport.Benchmark/Benchmarks/: BenchmarkBase.cs  InteropMethodsByRef.cs  InteropMethodsByValue.cs
AdvancedDLSupport.Benchmark/Data/: Matrix2.cs  Vector2.cs
AdvancedDLSupport.Benchmark/Native/: DllImportTest.cs  DllImportTestSuppressedSecurity.cs  ITest.cs
AdvancedDLSupport.Benchmark/c/: CMakeLists.txt
AdvancedDLSupport.Benchmark/c/CMake/: install-functions.cmake
AdvancedDLSupport.Benchmark/c/src/: comp.h  test.c
AdvancedDLSupport.Benchmark/targets/: CMake-Win.targets  CMake.targets
AdvancedDLSupport.Example/: AdvancedDLSupport.Example.csproj  IExample.cs  MyStruct.cs  Program.cs
AdvancedDLSupport.Example/c/: CMakeLists.txt
AdvancedDLSupport.Example/c/src/: Example.c
AdvancedDLSupport.Tests/: .editorconfig  AdvancedDLSupport.Tests.csproj  AdvancedDLSupport.Tests.csproj.DotSettings
AdvancedDLSupport.Tests/Data/: AdvancedDLSupport.Tests.dll.config
AdvancedDLSupport.Tests/TestBases/: IndirectCallsTestBase.cs  LibraryTestBase.cs  TypeTransformerRepositoryTestBase.cs
AdvancedDLSupport.Tests/c/: CMakeLists.txt
AdvancedDLSupport.Tests/c/CMake/: install-functions.cmake
AdvancedDLSupport.Tests/c/src/: AttributePassthroughTests.c  BaseTests.c  BooleanMarshallingTests.c  CallingConventionTests.c  ComplexTypeTests.c  CustomLoadingLogicTests.c  DisposeTests.c  EventTests.c  FunctionTests.c  GenericDelegateTests.c  GenericFunctionTests.c  IndirectCallTests.c  LazyLoadingTests.c  MixedModeTests.c  NameManglingTests.c  NullableTests.c  PropertyTests.c  RemappingTests.c  ReturnsSpanTests.c  SpanMarshallingTests.c  StringTests.c  SymbolTransformationTests.c  SymbolTransformationTests2.c  SymbolTransformationTests3.c  SymbolTransformationTests4.c  TypeLoweringTests.c  comp.h  wincomp.h
AdvancedDLSupport.Tests/targets/: CMake-Unix.targets  CMake-Win.targets  CMake.targets
AdvancedDLSupport/AOT/: IAOTMetadata.cs
AdvancedDLSupport/Attributes/: AnonymousConstructorAttribute.cs  CallerFreeAttribute.cs  DelegateLifetime.cs  DelegateLifetimeAttribute.cs  GenericManglerAttribute.cs  NativeAOT.cs  NativeCollectionLengthAttribute.cs  NativeFunctionAttribute.cs  (+2 more)
Mono.DllMap/: AssemblyInfo.cs  DllConfiguration.cs  DllEntry.cs  DllMap.cs  DllMapArchitecture.cs  DllMapOS.cs  DllMapResolver.cs  DllMapWordSize.cs  MappingBase.cs  Mono.DllMap.ExternalAnnotations.xml  Mono.DllMap.csproj
Mono.DllMap.Tests/: Mono.DllMap.Tests.csproj  app.config
Tests/AdvancedDLSupport.Tests/c/: CMakeLists.txt
Tests/AdvancedDLSupport.Tests/c/src/: BaseTests.c  CustomLoadingLogicTests.c  FunctionTests.c  LazyLoadingTests.c  NullableTests.c  PropertyTests.c  StringTests.c  TestStruct.h  comp.h
docs/: advanced_config.md  ahead-of-time.md  complex_types.md  developer_docs.md  index.md  indirect-calling.md  interface-composition.md  library_scanning.md  mixed_mode_classes.md  quickstart.md  supported_constructs.md  symbol-transformation.md
props/: common.props  msbuild-arch.props  nuget-common.props  stylecop.props
scripts/: appveyor-coverage.bat  appveyor-coverage.ps1  appveyor-install-dotnet-32.ps1  appveyor-test.bat  dotnet-wrapper.bat  travis-build.sh  travis-coverage.sh  travis-test.sh
targets/: CMake-Unix.targets  CMake-Win.targets  CMake.targets
(+288 files in other folders)
